Sync all content

--- a/content/resources/034ps10a.md
+++ b/content/resources/034ps10a.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Image
 title: 034ps10a.jpg
 uid: b3e7d5da-c39d-765c-b16e-58561a5345fc
