--- a/content/resources/034ps3c.md
+++ b/content/resources/034ps3c.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Image
 title: 034ps3c.jpg
 uid: c6968a77-18e1-0bbe-3591-0a66d8cd8815
