--- a/content/resources/034exam1.md
+++ b/content/resources/034exam1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/11e7f63cd051c58a66b5b068d82fe5a5_034exam1.pdf
 file_type: application/pdf
+parent_uid: 83cea548-8968-c5cc-9217-7c2459b121ac
 resourcetype: Document
 title: 034exam1.pdf
 uid: 11e7f63c-d051-c58a-66b5-b068d82fe5a5
