--- a/content/resources/034exam2.md
+++ b/content/resources/034exam2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/93bddb531e6ec6c15db9b2c9da2e68a8_034exam2.pdf
 file_type: application/pdf
+parent_uid: 83cea548-8968-c5cc-9217-7c2459b121ac
 resourcetype: Document
 title: 034exam2.pdf
 uid: 93bddb53-1e6e-c6c1-5db9-b2c9da2e68a8
