--- a/content/resources/034exam3.md
+++ b/content/resources/034exam3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/8b0e493dac523f9e6a7780c09dbb31a0_034exam3.pdf
 file_type: application/pdf
+parent_uid: 83cea548-8968-c5cc-9217-7c2459b121ac
 resourcetype: Document
 title: 034exam3.pdf
 uid: 8b0e493d-ac52-3f9e-6a77-80c09dbb31a0
