--- a/content/resources/034ps10.md
+++ b/content/resources/034ps10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/2621c528b94b29376dc87842bf6dda57_034ps10.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps10.pdf
 uid: 2621c528-b94b-2937-6dc8-7842bf6dda57
