--- a/content/resources/034ps10b.md
+++ b/content/resources/034ps10b.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Image
 title: 034ps10b.jpg
 uid: d6fa8308-389c-4d6d-6782-569e26a422c1
