--- a/content/resources/034ps2.md
+++ b/content/resources/034ps2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/a188d6c0e8f548fb809bd25a64d183de_034ps2.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps2.pdf
 uid: a188d6c0-e8f5-48fb-809b-d25a64d183de
