--- a/content/resources/034ps4.md
+++ b/content/resources/034ps4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/3302d04b1043f59e1f6a3575bbd45b47_034ps4.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps4.pdf
 uid: 3302d04b-1043-f59e-1f6a-3575bbd45b47
