--- a/content/resources/034ps5.md
+++ b/content/resources/034ps5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/c124a098171df79546fb026323cffcf0_034ps5.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps5.pdf
 uid: c124a098-171d-f795-46fb-026323cffcf0
