--- a/content/resources/034ps6.md
+++ b/content/resources/034ps6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/486c34d58e467967a62b5a42ced78f7b_034ps6.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps6.pdf
 uid: 486c34d5-8e46-7967-a62b-5a42ced78f7b
