--- a/content/resources/034ps7.md
+++ b/content/resources/034ps7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/2815c5d92b3857488cb954e11dfa210c_034ps7.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps7.pdf
 uid: 2815c5d9-2b38-5748-8cb9-54e11dfa210c
