--- a/content/resources/034ps8.md
+++ b/content/resources/034ps8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/6f83bc68856f2e4bdb1c9c8b61976e79_034ps8.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034ps8.pdf
 uid: 6f83bc68-856f-2e4b-db1c-9c8b61976e79
