--- a/content/resources/034soln1.md
+++ b/content/resources/034soln1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/a5b8a93a1740a0ed10b530de40c44188_034soln1.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln1.pdf
 uid: a5b8a93a-1740-a0ed-10b5-30de40c44188
