--- a/content/resources/034soln10.md
+++ b/content/resources/034soln10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/ebf863057211080ed1162c98eb8a90e8_034soln10.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln10.pdf
 uid: ebf86305-7211-080e-d116-2c98eb8a90e8
