--- a/content/resources/034soln2.md
+++ b/content/resources/034soln2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/5f0dfd74137be5e0172025129553d558_034soln2.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln2.pdf
 uid: 5f0dfd74-137b-e5e0-1720-25129553d558
