--- a/content/resources/034soln3.md
+++ b/content/resources/034soln3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/2ffe4f1eefdff4b9d9926af379800bf6_034soln3.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln3.pdf
 uid: 2ffe4f1e-efdf-f4b9-d992-6af379800bf6
