--- a/content/resources/034soln4.md
+++ b/content/resources/034soln4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/7f508ab96df279bda627ec1c19fcc58b_034soln4.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln4.pdf
 uid: 7f508ab9-6df2-79bd-a627-ec1c19fcc58b
