--- a/content/resources/034soln5.md
+++ b/content/resources/034soln5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/4fbb3418ff54a0436641aeacc5491536_034soln5.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln5.pdf
 uid: 4fbb3418-ff54-a043-6641-aeacc5491536
