--- a/content/resources/034soln6.md
+++ b/content/resources/034soln6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/e22cb2cb0bc09f22a86e9350c396939b_034soln6.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln6.pdf
 uid: e22cb2cb-0bc0-9f22-a86e-9350c396939b
