--- a/content/resources/034soln9.md
+++ b/content/resources/034soln9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/2c9be3602f0491a4a43599a19062887f_034soln9.pdf
 file_type: application/pdf
+parent_uid: 4e7f9918-eb20-ef35-9fd7-2d44c3d91442
 resourcetype: Document
 title: 034soln9.pdf
 uid: 2c9be360-2f04-91a4-a435-99a19062887f
