--- a/content/resources/lec33_34.md
+++ b/content/resources/lec33_34.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-034-honors-differential-equations-spring-2004/ffcf0fd2ca43b5a070c06af472060019_lec33_34.pdf
 file_type: application/pdf
+parent_uid: a967ef6f-f8dc-652e-25a4-fe395d0d00ec
 resourcetype: Document
 title: lec33_34.pdf
 uid: ffcf0fd2-ca43-b5a0-70c0-6af472060019
